[package]
authors = ["The Rust Project Developers"]
name = "panic_unwind"
version = "0.0.0"
edition = "2018"

[lib]
path = "lib.rs"
test = false
bench = false
doc = false

[dependencies]
alloc = { path = "../liballoc" }
core = { path = "../libcore" }
libc = { git = "https://gitlab.redox-os.org/redox-os/liblibc.git", branch = "redox", default-features = false }
unwind = { path = "../libunwind" }
compiler_builtins = "0.1.0"
